scripts/nullaway/wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8.txt
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/node/KademliaId.java:118: error: [NullAway] dereferenced expression nid is @Nullable
        byte[] nidBytes = nid.getBytes();
                             ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/node/KademliaId.java:120: error: [NullAway] dereferenced expression nidBytes is @Nullable
            result[i] = (byte) (this.keyBytes[i] ^ nidBytes[i]);
                                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/KadServer.java:174: error: [NullAway] dereferenced expression to is @Nullable
            pkt.setSocketAddress(to.getSocketAddress());
                                   ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/dht/GetParameter.java:32: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.key = key;
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/dht/GetParameter.java:56: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.key = c.getKey();
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/dht/GetParameter.java:72: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.key = md.getKey();
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/dht/StorageEntryMetadata.java:31: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.key = content.getKey();
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/dht/StorageEntryMetadata.java:32: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.ownerId = content.getOwnerId();
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/simulations/SaveStateTest2.java:48: error: [NullAway] dereferenced expression content is @Nullable
            DHTContentImpl cc = new DHTContentImpl().fromSerializedForm(content.getContent());
                                                                               ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/simulations/ContentSendingTest.java:47: error: [NullAway] dereferenced expression conte is @Nullable
            System.out.println("Content Found: " + new DHTContentImpl().fromSerializedForm(conte.getContent()));
                                                                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/simulations/ContentUpdatingTest.java:36: error: [NullAway] dereferenced expression conte is @Nullable
            System.out.println("Content Found: " + new DHTContentImpl().fromSerializedForm(conte.getContent()));
                                                                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/simulations/ContentUpdatingTest.java:44: error: [NullAway] dereferenced expression conte is @Nullable
            System.out.println("Content Found: " + new DHTContentImpl().fromSerializedForm(conte.getContent()));
                                                                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/routing/JKademliaRoutingTable.java:70: error: [NullAway] dereferenced expression n is @Nullable
        this.buckets[this.getBucketId(n.getNodeId())].insert(n);
                                       ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/util/RouteLengthChecker.java:64: error: [NullAway] enhanced-for expression inputSet is @Nullable
        for (Node n : inputSet) {
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/message/ContentLookupReceiver.java:54: error: [NullAway] dereferenced expression msg.getParameters() is @Nullable
            NodeLookupMessage lkpMsg = new NodeLookupMessage(msg.getOrigin(), msg.getParameters().getKey());
                                                                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/message/NodeLookupMessage.java:32: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.origin = origin;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/message/NodeLookupMessage.java:33: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.lookupId = lookup;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/operation/ContentLookupOperation.java:142: error: [NullAway] enhanced-for expression list is @Nullable
        for (Node o : list) {
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/operation/NodeLookupOperation.java:128: error: [NullAway] enhanced-for expression list is @Nullable
        for (Node o : list) {
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/dht/DHT.java:64: error: [NullAway] dereferenced expression content is @Nullable
        if (this.contentManager.contains(content.getContentMetadata())) {
                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/dht/DHT.java:182: error: [NullAway] dereferenced expression key is @Nullable
        String folderName = key.hexRepresentation().substring(0, 2);
                               ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/dht/DHT.java:198: error: [NullAway] enhanced-for expression ientries is @Nullable
        for (KademliaStorageEntryMetadata e : ientries) {
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/dht/StoredContentManager.java:67: error: [NullAway] dereferenced expression param is @Nullable
        if (this.entries.containsKey(param.getKey())) {
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/dht/StoredContentManager.java:105: error: [NullAway] dereferenced expression param is @Nullable
        if (this.entries.containsKey(param.getKey())) {
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/dht/StoredContentManager.java:147: error: [NullAway] dereferenced expression this.entries.get(entry.getKey()) is @Nullable
            this.entries.get(entry.getKey()).remove(entry);
                                            ^
    (see http://t.uber.com/nullaway )
../wpi/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/node/KeyComparator.java:22: error: [NullAway] dereferenced expression key is @Nullable
        this.key = key.getInt();
                      ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
26 errors
